--- a/src/View/Board/basic/articleTemplate.html
+++ b/src/View/Board/basic/articleTemplate.html
@@ -1,11 +1,13 @@
 <li class="list-group-li list-group-body">
     <div class="list-group-row">
         <div class="list-group-col col-custom-60 text-center">{{num}}</div>
+        {{thumb}}
         <div class="list-group-col col-custom-auto">
             <a href="/board/{{boardId}}/view/{{articleNo}}/{{slug}}">{{title}}</a>
             <div class="list-article-info">
                 <div class="list-item list-name mobile-only">{{nickName}}</div>
                 <div class="list-item list-date">{{date}}</div>
+                {{comment}}
                 <div class="list-item list-comment">{{comment}}</div>
             </div>
         </div>
