--- a/src/View/Board/basic/articleTemplate.html
+++ b/src/View/Board/basic/articleTemplate.html
@@ -3,12 +3,12 @@
         <div class="list-group-col col-custom-60 text-center">{{num}}</div>
         {{thumb}}
         <div class="list-group-col col-custom-auto">
-            <a href="/board/{{boardId}}/view/{{articleNo}}/{{slug}}">{{title}}</a>
+            <!--<a href="/board/{{boardId}}/view/{{articleNo}}/{{slug}}">{{title}}</a>-->
+            <a href="{{href}}">{{title}}</a>
             <div class="list-article-info">
                 <div class="list-item list-name mobile-only">{{nickName}}</div>
                 <div class="list-item list-date">{{date}}</div>
                 {{comment}}
-                <div class="list-item list-comment">{{comment}}</div>
             </div>
         </div>
         <div class="list-group-col text-center mobile-none">{{nickName}}</div>
