--- a/src/View/components/basic/menuTemplate.html
+++ b/src/View/components/basic/menuTemplate.html
@@ -1,4 +1,4 @@
 <li class="me_{{depth}}dli me_{{code}} {{swiperSlide}} {{class}}">
-    <a href="{{link}}" class="me_{{depth}}da" target="_{{target}}">{{name}}</a>
+    <a href="{{link}}" class="me_{{depth}}da {{active}}" target="_{{target}}">{{name}} {{icon}}</a>
     {{children}}
 </li>
