--- a/src/View/Templates/editor/basic/template.editor.html
+++ b/src/View/Templates/editor/basic/template.editor.html
@@ -1,12 +1,13 @@
+<style>
+#{{boxId}} .editor-content img { width: auto; height: auto; max-width: 100%; }
+</style>
 <div class="editor-box" id="{{boxId}}">
     <div class="editor-content">
         {{content}}
     </ul>
 </div>
 <script>
-    // 이 박스에만 적용되는 JavaScript 코드
     document.addEventListener('DOMContentLoaded', function() {
         var editorBox = document.getElementById('{{boxId}}');
-        // 추가 JavaScript 로직...
     });
 </script>
